--- a/example.html
+++ b/example.html
@@ -7,16 +7,19 @@
   </head>
 
   <h1>Girls Who Code</h1>
-  <p> Hi!!!!!! My name is paula:) I am involved in the following activites!</p>
+  <p> Hi!!!!!! My name is paula:)I am in highschool and love my pup, Alaska! I love to...</p>
 
   <ul>
-    <li>Student council</li>
-    <li>NHS</li>
-    <li>SHS</li>
-    <li>Tennis</li>
+    <li>Listen to music</li>
+    <li>Play tennis</li>
+    <li>Go biking</li>
+    <li>Play volleybal</li>
+    <li>Play the uke and guitar</li>
 
 <img height = "400" width = "300" align = "left" src="images-3.jpg"/>
 
+<p></p>
+<a href= "https://www.youtube.com/watch?v=jEgqQn1xoKU">Ansel Elgort</a>
 
 <style>
       h1 {
@@ -39,3 +42,10 @@ body {
 
   </style>
   </html>
+
+  <html>
+  <body>
+  <h1>My Personal Website</h1>
+  <a href= "maps.html">mapa</a>
+  </html>
+  </body>
